Adding meaningful Link

--- a/_posts/2019-03-20-Kioptrix-1.3.md
+++ b/_posts/2019-03-20-Kioptrix-1.3.md
@@ -488,3 +488,8 @@ john@Kioptrix4:~$ ./escalate2root
 uid=1001(john) gid=1001(john) euid=0(root) egid=0(root) groups=27(sudo),1001(john)
 # 
 ```
+
+I then found a guide that exploitet a weakness on the member.php page to get the list of users and also it followed the same exploitation way for teh mysql even if with slightly small differences on the findings of the vulnerabilities. I think is worth reporting it:
+
+[penetration-testing-practice-hacking-kioptrix-l4](https://nandtech.co/2017/07/16/penetration-testing-practice-hacking-kioptrix-l4/)
+
